fix: encuadrar celda naviera con stretch y mostrar 3 letras del codigo BIC

--- a/frontend/src/styles/05-components/_fila-naviera-tarifas.scss
+++ b/frontend/src/styles/05-components/_fila-naviera-tarifas.scss
@@ -1,9 +1,9 @@
 .fila-naviera-tarifas {
   display:     flex;
-  align-items: center;
+  align-items: stretch;
 
   &__celdas {
     display:     flex;
-    align-items: center;
+    align-items: stretch;
   }
 }
